--- a/documentation/wordcab_api_reference.yaml
+++ b/documentation/wordcab_api_reference.yaml
@@ -1003,6 +1003,10 @@ paths:
             **Default value:** `en`<br>
             Set the language for the resulting summary.<br>
             It can be `en`, `es`, `de`, `fr`, `it` or `sv`. Note that apart from `en` all languages are in beta phase.
+          schema:
+            type: string
+            default: en
+          example: en
         - name: split_long_utterances
           in: query
           required: false
