--- a/documentation/wordcab_api_reference.yaml
+++ b/documentation/wordcab_api_reference.yaml
@@ -143,6 +143,12 @@ components:
                             description: >
                               A summary 'bullet', part of one or more bullets composing the Narrative Summary for a 
                               particular summary length.
+                          context:
+                            type: array
+                            description: >
+                              An array of context items for the summary 'bullet'. Each context item is an object with a
+                              key and value. Can have any number of context items including: `issue`, `purpose`,
+                              `keywords`, `next_steps` and `discussion_points`.
                           start_timestamp:
                             type: integer
                             description: >
@@ -220,22 +226,65 @@ components:
                                   description: >
                                     Used in place of the `end_time` and `end_timestamps` when no timestamps 
                                     were provided in the original transcript input.
-    ShortSummary:
+    ConversationalSummary:
+      allOf:
+        - $ref: '#/components/schemas/NarrativeSummary'
+    NoSpeakerSummary:
+      allOf:
+        - $ref: '#/components/schemas/ConversationalSummary'
+    BriefSummary:
       allOf:
         - $ref: '#/components/schemas/BaseSummary'
         - type: object
           properties:
             summary:
               type: object
-              description: A single-sentence summary. Works best on transcripts with over 5 minutes of speech.
+              description: >
+                A brief-style summary split into individual 'bullets', with each bullet having a corresponding 
+                transcript object.
               properties:
-                short_summary:
-                  type: string
+                '^[1-5]$':
+                  type: object
+                  pattern: '^[1-5]$'
                   description: >
-                    In most cases, the Short Summary is a single sentence long. It's structured in the 
-                    following format: _The speakers discussed Topic 1, Topic 2, and Topic 3_, whereas 
-                    each topic corresponds to an important point that was discussed in the conversation. 
-                    The number of Topics per each `short_summary` sentence can range from two to five.
+                    The key is a number from `1` through `5`, represented as a **string** (for example, '3').
+                    Each number represents the level of detail of the corresponding summary. `1` Would be the 
+                    shortest summary, and `5` the longest. Each Brief Summary has one or more summary objects,
+                    based on the `summary_lens` that were set during job creation. For example if `summary_lens`
+                    was set to '1,3,5', there would be three summary objects in `summary`, with keys '1', '3', and '5'.
+                  properties:
+                    structured_summary:
+                      type: array
+                      items:
+                        type: object
+                        properties:
+                          summary:
+                            type: array
+                            description: >
+                              An array containing the summary `title` and `brief_summary` for the summary 'bullet'.
+                          context:
+                            type: array
+                            description: >
+                              An array of context items for the summary 'bullet'. Each context item is an object with a
+                              key and value. Can have any number of context items including: `issue`, `purpose`,
+                              `keywords`, `next_steps` and `discussion_points`.
+                          start_timestamp:
+                            type: integer
+                            description: >
+                              The timestamp of the moment the summary began, in **milliseconds**, with 0 being the start
+                              of the conversation. Only present if timestamps were included in the transcript that was
+                              used for the job, or if the job input was an audio file.
+                          end_timestamp:
+                            type: integer
+                            description: >
+                              The timestamp of the moment the summary ended, in **milliseconds**, with 0 being the start
+                              of the conversation. Only present if timestamps were included in the transcript that was
+                              used for the associated job, or if the job input was an audio file.
+                          start_time:
+                            type: string
+                            description: >
+                              The start time of the summary, in human-readable format: **00:01:23**. Only present if 
+                              timestamps were included
     TranscriptFile:
       type: object
       properties:
@@ -321,16 +370,6 @@ components:
             list of numbers 1-5 (ex. '1,3,5').
       example:
         error: The 'summary_lens' parameter should be a number from 1-5, or a comma-separated list of numbers 1-5 (ex. '1,3,5').
-    FocusedSummaryNoTerms:
-      type: object
-      properties:
-        error:
-          type: string
-          description: >
-            You need to enter a comma-separated list of one or more `summary_terms` in order 
-            to generate a focused summary.
-      example:
-        error: You need to enter a comma-separated list of one or more 'summary_terms' in order to generate a focused summary.
     MissingSignedURL:
       type: object
       properties:
@@ -491,14 +530,19 @@ components:
             `summary_id`, which you can use to retrieve the generated summary. For more detailed descriptions 
             of the other details, please see the **/summarize** endpoint.
           properties:
+            context:
+              type: object
+              description: >
+                A dictionnary with the context items requested for the summary.
+                Can have the following keys: `issue`, `purpose`, `keywords`, `discussion_points` and `next_steps`
             summary_id:
               type: string
             summary_type:
               type: string
-              enum: [narrative, short]
+              enum: [narrative, brief, conversational, no_speaker]
             summary_lens:
               type: string
-              description: Only displayed if `summary_type` is `narrative`.
+              description: Can be between 1 and 5.
         source:
           type: string
           description: The `source` that was set during job creation.
@@ -940,11 +984,22 @@ paths:
             * `narrative` - Wordcab's default summary type, which aims to produce a detailed, bullet-point style summary.
             * `conversational` - A summary that suits internal meetings and sales calls when you don't need an exact play-by-play of the events. Consider choosing `narrative` if you do.
             * `no_speaker` - Similar to the `conversational` summary, without referencing any speakers and going straight to the important events in a conversation.
+            * `brief` - A new summary type that provides a title and a single-sentence summary for each section of transcript. It's ideally used by pairing with `Context Items` to get a detailed overview of the transcript.
           schema:
             type: string
             default: narrative
             enum: [ narrative, conversational, no_speaker ]
           example: narrative
+        - name: context
+          in: query
+          required: false
+          description: |
+            Context features provide additional context to Wordcab summaries, focusing on the most important aspects of the original transcript.
+            * `issue` - This item represents the main problem or concern that the section of transcripts aims to address.
+            * `purpose` - This item describes the primary goal or objective of the transcript.
+            * `keywords` - This item is an array of important words or phrases relevant to the document's content.
+            * `next_steps` - This item is the recommended next action conveyed by one or more speakers.
+            * `discussion_points` - This item is an array of notable topics discussed in the document.
         - name: summary_lens
           in: query
           required: false
@@ -989,7 +1044,7 @@ paths:
           description: >
             **Default value:** `en`<br>
             Set the language of the input source.<br>
-            It can be `en`, `es`, `de`, `fr`, `it`, `nl` or `sv`. Note that apart from `en` all languages are in beta phase.
+            It can be `en`, `es`, `de`, `fr`, `it`, `nl`, `pt` or `sv`. Note that apart from `en` all languages are in beta phase.
           schema:
             type: string
             default: en
@@ -1000,7 +1055,7 @@ paths:
           description: >
             **Default value:** `en`<br>
             Set the language for the resulting summary.<br>
-            It can be `en`, `es`, `de`, `fr`, `it` or `sv`. Note that apart from `en` all languages are in beta phase.
+            It can be `en`, `es`, `de`, `fr`, `it`, `nl`, `pt` or `sv`. Note that apart from `en` all languages are in beta phase.
           schema:
             type: string
             default: en
@@ -1839,10 +1894,14 @@ paths:
                   propertyName: summary_type
                   mapping:
                     narrative: '#/components/schemas/NarrativeSummary'
-                    short: '#/components/schemas/ShortSummary'
+                    conversational: '#/components/schemas/ConversationalSummary'
+                    no_speaker: '#/components/schemas/NoSpeakerSummary'
+                    brief: '#/components/schemas/BriefSummary'
                 anyOf:
                   - $ref: '#/components/schemas/NarrativeSummary'
-                  - $ref: '#/components/schemas/ShortSummary'
+                  - $ref: '#/components/schemas/ConversationalSummary'
+                  - $ref: '#/components/schemas/NoSpeakerSummary'
+                  - $ref: '#/components/schemas/BriefSummary'
         '400':
           description: Bad request
           content:
