--- a/documentation/wordcab_api_reference.yaml
+++ b/documentation/wordcab_api_reference.yaml
@@ -862,21 +862,17 @@ paths:
             default: false
           example: false
       requestBody:
-        oneOf:
-          - $ref: "#/components/requestBodies/TranscriptFile"
-          - $ref: "#/components/requestBodies/AudioFile"
-          - $ref: "#/components/requestBodies/VTTFile"
-          - $ref: "#/components/requestBodies/jsonBody"
-#        content:
-#          multipart/form-data:
-#            schema:
-#              oneOf:
-#                - $ref: "#/components/schemas/TranscriptFile"
-#                - $ref: "#/components/schemas/AudioFile"
-#                - $ref: "#/components/schemas/VTTFile"
-#          application/json:
-#           schema:
-#             $ref: "#/components/schemas/jsonBody"
+        content:
+          multipart/form-data:
+            schema:
+              oneOf:
+                - $ref: "#/components/schemas/TranscriptFile"
+                - $ref: "#/components/schemas/AudioFile"
+                - $ref: "#/components/schemas/VTTFile"
+                - $ref: "#/components/schemas/jsonBody"
+          # application/json:
+          #   schema:
+          #     $ref: "#/components/schemas/jsonBody"
       responses:
         '201':
           description: Successfully created a job
