--- a/documentation/wordcab_api_reference.yaml
+++ b/documentation/wordcab_api_reference.yaml
@@ -65,6 +65,23 @@ components:
       description: >
         If `source` is set to `vtt`, you can use raw vtt text in the request body. Make sure your vtt is 
         formatted correctly (you can use [this validator](https://quuz.org/webvtt/)).
+        **Example**
+        WEBVTT
+
+        00:11.000 --> 00:13.000 vertical:rl
+        <v Roger Bingham>We are in New York City
+
+        00:13.000 --> 00:16.000
+        <v Roger Bingham>We're actually at the Lucern Hotel, just down the street
+
+        00:16.000 --> 00:18.000
+        <v Roger Bingham>from the American Museum of Natural History
+
+        00:18.000 --> 00:20.000
+        <v Roger Bingham>And with me is Neil deGrasse Tyson
+
+        00:20.000 --> 00:22.000
+        <v Roger Bingham>Astrophysicist, Director of the Hayden Planetarium
     BaseSummary:
       type: object
       description: Base Summary
